sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:14: error: not found: value a1
				echange(i,i+1);a=a1
                                                 ^