sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
	val l = getNombreValeurs()-2
	var fin = true
	var a = 0
	do {
		for (i<- 0 to l) {
			if (plusPetit(i+1,i)) {
				echange(i,i+1); a=a+1
			}
		}
		for ( i<- l to 0 by -1) {
			if (plusPetit(i+1,i)) {
				echange(i,i+1);a=a1
			}
		}
		if (a==0) {
			fin =false
		}
	} while (fin)
}
